# Mcp-Plus-Plus

./: .gitignore  API_REFERENCE.md  BEST_PRACTICES.md  CONTRIBUTING.md  CURRENT_COVERAGE_STATUS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  FINAL_100_PERCENT_COVERAGE_SUMMARY.md  FINAL_COVERAGE_ACHIEVEMENT.md  GETTING_STARTED.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY.md  TESTING_SUMMARY.md  VALIDATION_TESTING_SUMMARY.md  VERIFICATION_COMPLETE.md
conformance/: README.md
docs/: ARCHITECTURE.md  index.md
examples/: README.md
tests-go/: README.md  TEST_COVERAGE_REPORT.md  canonical_wire_test.go  conformance_vectors_test.go  coverage.html  coverage.out  go.mod  models.go  profile_g_codec_test.go
tests-py/: COVERAGE_100_PERCENT.md  COVERAGE_REPORT.md  COVERAGE_REPORT_94_PERCENT.md  README.md  SPEC_COMPLIANCE.md  TYPE_SAFETY.md  VERIFICATION.md  __init__.py  coverage_final_94_percent.txt  coverage_output.txt  mypy.ini
tests-rs/: COVERAGE_100_PERCENT_ACHIEVED.md  COVERAGE_ACHIEVEMENT_SUMMARY.md  COVERAGE_FINAL_REPORT.md  COVERAGE_IMPROVEMENT.md  COVERAGE_VERIFICATION.txt  Cargo.toml  README.md  coverage_100_percent_final.txt  coverage_new.lcov  final_coverage.lcov  lcov.info  lcov_final.info  lcov_latest.info
tests-rs/src/: lib.rs  models.rs
tests-rs/src/validators/: base_mcp.rs  cid_artifacts.rs  event_dag.rs  mcp_idl.rs  mod.rs  policy_evaluation.rs  transport.rs  ucan_delegation.rs
tests-rs/tests/: conformance_vectors_test.rs  coverage_completion_test.rs  integration_test.rs  profile_g_codec_test.rs
tests-ts/: README.md  coverage-summary.txt  package.json  (+3 more)
(+173 files in other folders)
