[package]
name = "mcp-validators"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = "0.20"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
